# RCPCC

./: README.md  bk.md
src/: CMakeLists.txt  example.cpp
src/modules/: binary_compressor.cpp  binary_compressor.h  dct.cpp  dct.h  decoder_module.cpp  decoder_module.h  encoder_module.cpp  encoder_module.h  serializer.cpp  serializer.h
src/utils/: config.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  io.cpp  io.h  struct.h  utils.cpp  utils.h  utils_impl.h
